2024-11-22 17:34:23 Game 001 of a 4x4 board
lux Result:LOSE  Point:6
jasmer Result:WIN  Point:10